feat: expose rule version details
