# docs/swagger.json
@@ -319,6 +319,59 @@
                 }
             }
         },
+        "/api/v1/rule-versions/get": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    },
+                    {
+                        "PSK": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rule versions"
+                ],
+                "summary": "Get a rule version",
+                "parameters": [
+                    {
+                        "description": "Rule version selector",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httptransport.GetRuleVersionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httptransport.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "$ref": "#/definitions/httptransport.RuleVersionView"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/rule-versions/list": {
             "post": {
                 "security": [
@@ -891,6 +944,23 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "tenant_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "httptransport.GetRuleVersionRequest": {
+            "type": "object",
+            "properties": {
+                "application_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "rule_set_id": {
                     "type": "string"
                 },
                 "tenant_id": {
